Fix the alignment of the about section

--- a/styles.css
+++ b/styles.css
@@ -339,7 +339,7 @@
   width: 351px;
   gap: 24px;
   padding-top: 48px;
-  padding-left: 42px;
+  padding-left: 12px;
   padding-right: 12px;
 }
 
